--- a/i18n/locales/en-US.json
+++ b/i18n/locales/en-US.json
@@ -137,7 +137,8 @@
       "deviceType": "Device Type",
       "os": "OS",
       "browser": "Browser",
-      "browserType": "Browser Type"
+      "browserType": "Browser Type",
+       "ip": "IP Address"
     },
     "time_picker": {
       "today": "Today",
